--- a/src/components/Exchange/FAQ.module.css
+++ b/src/components/Exchange/FAQ.module.css
@@ -6,7 +6,7 @@ padding: 40px;
 gap: 20px;
 top: 10190px ;
 position: absolute;
-height: 1432px;
+height: fit-content;
 width: 100%;
 background: #F1F1F1;
 
