--- a/src/App.css
+++ b/src/App.css
@@ -101,5 +101,8 @@ border-radius: 0px;
             margin-left: 0px;
             margin-bottom: 30px;
             }
-     
+     .logo {
+        
+              padding-right: 80px;
+            }   
 }
