--- a/src/components/Web3.0/Contact.module.css
+++ b/src/components/Web3.0/Contact.module.css
@@ -24,3 +24,31 @@ border-radius: 0px;
     width: 550px;
     margin-left: -350px ;
 }
+
+@media (max-width: 767px) {
+    .section1{
+        display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 40px;
+    position: absolute;
+    height: fit-content;
+    width: 100%;
+    top: 15530px;
+    background: #D6DCE0;
+    border-radius: 0px;
+    }
+    .section1 h1{
+        margin-top: -870px;
+        margin-left: 0px;
+    }
+    .section1 p{
+       margin-top: -650px;
+       margin-left: -300px;
+    }
+    .table{
+        width: 500px;
+        margin-left: -200px ;
+    }
+}
