--- a/src/components/Web3.0/FAQ.module.css
+++ b/src/components/Web3.0/FAQ.module.css
@@ -22,3 +22,28 @@ border-radius: 0px;
     width: 60%;
     margin-left: 500px;
 }
+
+@media (max-width: 767px) {
+  
+    .section1{
+        height: fit-content;
+        width: 100%;
+           top: 13165px;
+        background: #F1F1F1;
+        border-radius: 0px;
+        }
+        .section1 h1{
+          text-align: center;
+        }
+     
+        .section1 img{
+       
+        height: 468px;
+    margin-left: 60px;
+        }
+        .questions {
+        width: 350px;
+        margin-left: 0px;
+        margin-top: 50px;
+        }
+}
