--- a/src/components/Web3.0/Services.module.css
+++ b/src/components/Web3.0/Services.module.css
@@ -16,3 +16,18 @@ border-radius: 0px;
 .sec{
     margin-left: 18%;
 }
+
+@media (max-width: 767px) {
+    .section1{
+    height: fit-content;
+    top: 11600px;
+    padding: 0px 40px 40px;
+    
+    }
+    .section1 h1{
+      margin-top: -80%;
+    }
+    .sec{
+        margin-left: 0%;
+    }
+}
