--- a/src/components/Metaverse/Cards.module.css
+++ b/src/components/Metaverse/Cards.module.css
@@ -11,3 +11,20 @@ top: 871px;
 background: #D6DCE0;
 border-radius: 0px;
 }
+
+@media (max-width: 767px) {
+
+    .section1{
+    top: 950px;
+    }
+    .image{
+margin-top: -600px !important;
+
+}
+    .cards{
+        margin-top: 170px;
+    }
+    .card2{
+        margin-bottom: 50px;
+    }
+}
