--- a/src/components/Metaverse/Meta.module.css
+++ b/src/components/Metaverse/Meta.module.css
@@ -5,7 +5,7 @@ width: 100%;
 top: 116px;
 color: white;
 }
-.section1 img{
+.image1{
     width: 100%;
     margin-top: -30px;
 }
@@ -22,4 +22,43 @@ font-size: 48px;
     color: black;
     margin-top:630px;
     text-align: center;
+}
+@media (max-width: 767px) {
+    .section1{
+    position: relative;
+    padding: 10px 15px;
+    color: black;
+  }
+ 
+    .image1{
+        margin-top: -110px;
+        height: 250px;
+    }
+    .section1 h1{
+        margin-top: 70px;
+        margin-left: 40px;
+        font-weight: 700;
+    font-size: 40px;
+ 
+    }
+    .section1 h5{
+        margin-left: 40px;
+    
+    }
+    .section2{
+        background-color: rgb(139, 51, 222);
+        color: rgb(255, 255, 255);
+        margin-top:70px;
+        text-align: center;
+        height: fit-content;
+    padding-bottom: 40px;
+    }
+    .section2 h1{
+        padding-top: 50px;
+    }
+    .section2 p{
+        width: 85%;
+        margin-left: 30px;
+    
+    }
 }
