--- a/src/components/Wallet/wallet.module.css
+++ b/src/components/Wallet/wallet.module.css
@@ -17,7 +17,7 @@ border-radius: 0px;
 .section1 img{
     margin-left: 60%;
     height: 500px;
- margin-top: -100px;
+ margin-top: -90px;
 }
 .section1 h5{
     width: 50%;
@@ -27,7 +27,6 @@ border-radius: 0px;
 align-items: center;
 padding: 3px 28px;
 gap: 16px;
-
 width: 266px;
 height: 46px;
 color: #FCFCFA;
@@ -42,5 +41,14 @@ border-radius: 10px;
     line-height: 36px;
 }
 .section1 h1{
-    margin-top: -20%;
+    margin-top: -29%;
+}
+.section1 h3{
+    margin-left: -50%;
+    width: 750px;
+    text-align: center;
+    font-weight: 800;
+}
+.section1 form{
+    margin-left: -30%;
 }
