--- a/src/components/Nft/Nft.module.css
+++ b/src/components/Nft/Nft.module.css
@@ -43,3 +43,46 @@ border-radius: 0px;
     font-size: large;
     font-weight: 600;
 }
+@media (max-width: 767px) {
+    .section1{
+    position: relative;
+    padding: 10px 15px;
+    color: black;
+    height: fit-content;
+  }
+
+ 
+    .section1 img{
+        margin-top: 10px;
+        height: 320px;
+        margin-left: -2%;
+    }
+    .section1 h1{
+        margin-top: 30px;
+        margin-left: 0px;
+        font-weight: 700;
+    font-size: 30px;
+    text-align: center;
+ 
+    }
+    .section1 p{
+        width: 380px;
+        margin-left: 0px;
+        text-align: center;  
+    }
+    
+    .section2{
+        padding: 40px 20px 40px;
+        margin-top:100px;
+        text-align: center;
+        height: fit-content;
+    }
+    .section2 h1{
+        padding-top: 0px;
+    }
+    .section2 p{
+        width: 85%;
+        margin-left: 0px;
+    
+    }
+}
