--- a/src/components/Defi/Company.module.css
+++ b/src/components/Defi/Company.module.css
@@ -27,3 +27,35 @@ border-radius: 0px;
     margin-left: -54%;
 
 }
+@media (max-width: 767px) {
+    .section1{
+        display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px 40px;
+    
+    position: absolute;
+    height: fit-content;
+    width: 100%;
+    margin-top: 500px;
+    
+    background: #060A3A;
+    border-radius: 0px;
+    }
+    .sec{
+        width: 100%;
+        color: white;
+        margin-left: 0%;
+        text-align: center;
+        margin-top: 12%;
+    }
+    .sec p{
+        font-size: 18px;
+    }
+    .section1 img{
+        margin-left: 0%;
+        height: 300px;
+    
+    }
+}
