--- a/src/components/Defi/defi.module.css
+++ b/src/components/Defi/defi.module.css
@@ -81,3 +81,85 @@ border-radius: 0px;
     margin-left: 50%;
     margin-top: -10%;
 }
+@media (max-width: 767px) {
+    .section1{
+    position: relative;
+    height: fit-content;
+    top: 0px;
+  }
+
+    .section1 img{
+        margin-top: 10px;
+        height: 320px;
+        margin-left: -2%;
+    }
+    .section1 h1{
+        margin-top: 30px;
+        margin-left: 0px;
+        font-weight: 700;
+    font-size: 30px;
+    text-align: center;
+     
+    }
+    .section1 p{
+        width: 380px;
+        margin-left: 0px;
+        text-align: center;  
+    }
+    
+    .section2{
+        text-align: center;
+        height: fit-content;
+    }
+    .section2 img{
+        margin-top: 10px;
+        height: 300px;
+        margin-left: 0%;
+
+    }
+    .sec{
+        width: 100%;
+        margin-left: 0%;
+        margin-top: 10px;
+    }
+    .sec h2{
+font-size: 20px;
+text-align: center;
+margin-top: 20px;
+    }
+    .section2 button {
+    padding: 3px 8px;
+       width: 230px;
+    height: 45px;
+    font-size: 15px;
+    border-radius: 12px;
+ margin-bottom: 10px;
+    }
+    .section3{
+        display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px 40px;
+    position: absolute;
+    height: fit-content;
+ 
+    top: 1450px;
+
+    }
+    .sec1{
+        width: 100%;
+        margin-left: 0%;
+        margin-top: 10px;
+        text-align: center;
+    }
+    .sec1 h2{
+        font-size: 20px;
+        text-align: center;
+            }
+    .section3 img{
+        margin-top: 10px;
+        height: 320px;
+        margin-left: 0%;
+    }
+}
