--- a/src/components/Defi/Services.module.css
+++ b/src/components/Defi/Services.module.css
@@ -36,3 +36,26 @@ top: 4380px;
 background: #FCFCFF;
 border-radius: 0px;
 }
+@media (max-width: 767px) {
+    .section1{
+
+        height: 1000px;
+    margin-top: 700%;
+        width: 100%;
+        height: fit-content;
+        color: rgb(3, 3, 3);
+    }
+    .section1 img{
+        width: 100%; 
+        height: 210px;
+    }
+    .section1 h2{
+        width: 100%;
+        margin-top: 0%;
+        text-align: center;
+        font-size: 19px;
+    }
+    .section2{
+    margin-top: 3050px;
+      }
+}
