--- a/src/components/Exchange/Admin.module.css
+++ b/src/components/Exchange/Admin.module.css
@@ -20,3 +20,22 @@ border-radius: 0px;
     margin-left: -60%;
     margin-top: -28%;
 }
+
+@media (max-width: 767px) {
+    .section1{
+    padding: 30px 10px 40px 10px;
+    height: fit-content;
+    width: 100%;
+    margin-top: 4710px;
+
+    }
+    .section1 img{
+        margin-left: 0%;
+        height: 300px;
+        width: 100%;
+    }
+    .questions{
+        margin-left: 0%;
+        margin-top: 0%;
+    }
+}
