--- a/src/components/Exchange/ExDevelopment.module.css
+++ b/src/components/Exchange/ExDevelopment.module.css
@@ -108,3 +108,108 @@ border-radius: 0px;
  .sec3 h1{
     margin-top: -50%;
  }
+ @media (max-width: 767px) {
+    .section1{
+
+    height: fit-content;
+    width: 100%;
+    margin-top: 250px;
+
+    }
+    .box{
+        position: absolute;
+    width: 400px;
+    top: 5%;
+    bottom: 2%;
+    padding-top:50px ;
+    background: #FFFFFF;
+    height: 300px;
+    padding-left: 25px;
+    margin-left: 0%;
+    }
+    .box p{
+        color: #012043;
+    font-weight: 700;
+    }
+    .sec{
+        margin-top: 400px;
+        width: 100%;
+        margin-left: 0%;
+    }
+    .sec h6{
+       line-height: 30px; 
+    text-align: justify;
+    }
+    .sec button{
+        margin-top: 10%;
+      margin-inline: 20px;
+        background: #904230;
+        border-radius: 10px;
+    color: white;
+    padding: 3px 8px;
+    }
+    .section2{
+        display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px 40px;
+    
+    position: absolute;
+    height: 662px;
+    width: 100%;
+    top: 1380px;
+    
+    background: #0A2A42;
+    border-radius: 0px;
+    }
+    .section2 img{
+        margin-left: 58%;
+    }
+    .sec2{
+        width: 50%;
+        color: white;
+        margin-left: -50%;
+        margin-top: -32%;
+    }
+    .sec2 h6{
+        line-height: 30px; 
+     text-align: justify;
+     }
+     .sec2 button{
+        background: #904230;
+        border-radius: 10px;
+    color: white;
+    padding: 3px 8px;
+    }
+    .section3{
+        display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px 40px;
+    
+    position: absolute;
+    height: 609px;
+    left: 0px;
+    right: 0px;
+    top: 2040px;
+    
+    background: #D6DCE0;
+    border-radius: 0px;
+    }
+    .section3 img{
+        margin-left: -55%;
+    }
+    .sec3{
+            width: 50%;
+            margin-left: 45%;
+    }
+    .sec3 h6{
+        line-height: 30px; 
+     text-align: justify;
+     }
+     .sec3 h1{
+        margin-top: -50%;
+     }
+ }
