--- a/src/components/Exchange/Exchange.module.css
+++ b/src/components/Exchange/Exchange.module.css
@@ -24,3 +24,34 @@ color: white;
 .section1 h1{
     margin-top: -25%;
 }
+@media (max-width: 767px) {
+    .section1{
+    position: relative;
+    height: fit-content;
+    top: 0px;
+  }
+
+    .section1 img{
+        margin-top: 10px;
+        height: 320px;
+        margin-left: 0%;
+    }
+    .section1 h1{
+        margin-top: 10px;
+          font-size: 30px;
+    text-align: center;
+     
+    }
+ .section1 h5{
+    text-align: center;
+    font-size: 18px;
+    padding-bottom: 30px;
+padding-top: 15px;
+line-height: 25px;
+ }
+    .section1 h5, .section1 h1, .section1 p{
+        width: 100%;
+        margin-left: 0%;
+    }
+
+}
