--- a/src/components/Exchange/Order.module.css
+++ b/src/components/Exchange/Order.module.css
@@ -21,3 +21,21 @@ border-radius: 0px;
     margin-left: 50%;
     margin-top: -28%;
 }
+
+@media (max-width: 767px) {
+    .section1{
+    padding: 30px 10px 30px 10px;
+    height: fit-content;
+    margin-top: 4790px;
+    width: 100%;
+        }
+    .section1 img{
+        margin-left: 0%;
+        height: 300px;
+        width: 100%;
+    }
+    .questions{
+        margin-left: 0%;
+        margin-top: 0%;
+    }
+}
