--- a/src/components/Exchange/Services.module.css
+++ b/src/components/Exchange/Services.module.css
@@ -13,3 +13,23 @@ top: 8650px;
 background: #ffffff;
 border-radius: 0px;
 }
+
+.card{
+    height: "410px" !important;
+}
+
+@media (max-width: 767px) {
+    .section1{
+        display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px 40px 90px;
+    gap: 40px;
+    width: 100%;
+    height: fit-content;
+    margin-top: 4900px;
+      }
+      .card{
+        height: 450px !important;
+    }
+}
