--- a/src/components/Exchange/Solution.module.css
+++ b/src/components/Exchange/Solution.module.css
@@ -22,3 +22,23 @@ border-radius: 0px;
     margin-left: 40%;
     margin-top: -28%;
 }
+@media (max-width: 767px) {
+    .section1{
+     height: fit-content;
+    width: 100%;
+    margin-top: 4650px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    }
+    
+    .section1 img{
+        margin-left: 0%;
+        height: 300px;
+        width: 100%;
+    }
+    
+    .questions{
+        margin-left: 0%;
+        margin-top: 0%;
+    }
+}
