--- a/src/components/Exchange/ExDevelopment.module.css
+++ b/src/components/Exchange/ExDevelopment.module.css
@@ -153,60 +153,55 @@ border-radius: 0px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 20px 40px;
+    padding: 30px 0px;
     
     position: absolute;
-    height: 662px;
+    height: fit-content;
     width: 100%;
-    top: 1380px;
+    margin-top: 900px;
     
     background: #0A2A42;
     border-radius: 0px;
     }
     .section2 img{
-        margin-left: 58%;
+        margin-left: 0%;
+        padding-top: 20px;
+        height: 350px;
+        width: 100%;
     }
     .sec2{
-        width: 50%;
+        width: 100%;
         color: white;
-        margin-left: -50%;
-        margin-top: -32%;
+        margin-left: 0%;
+        margin-top: 7%;
+        padding-left: 20px;
+        padding-right: 20px;
     }
     .sec2 h6{
-        line-height: 30px; 
+        line-height: 28px; 
      text-align: justify;
      }
-     .sec2 button{
-        background: #904230;
-        border-radius: 10px;
-    color: white;
-    padding: 3px 8px;
-    }
+   
     .section3{
-        display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 20px 40px;
-    
-    position: absolute;
-    height: 609px;
-    left: 0px;
-    right: 0px;
-    top: 2040px;
-    
-    background: #D6DCE0;
-    border-radius: 0px;
+   
+    padding: 30px 0px;
+height: fit-content;
+    margin-top: 1420px;
     }
     .section3 img{
-        margin-left: -55%;
+        margin-left: 0%;
+        height: 300px;
+        width: 100%;
     }
     .sec3{
-            width: 50%;
-            margin-left: 45%;
+            width: 100%;
+            margin-left: 0%;
+            padding-left: 20px;
+            padding-right: 20px;
+            margin-top: 250px;
     }
     .sec3 h6{
-        line-height: 30px; 
+        line-height: 25px;
      text-align: justify;
      }
      .sec3 h1{
