--- a/src/components/Wallet/FAQ.module.css
+++ b/src/components/Wallet/FAQ.module.css
@@ -1,27 +1,95 @@
-.section1{
+.section1 {
     display: flex;
-flex-direction: column;
-align-items: center;
-padding: 40px;
-gap: 20px;
-top: 3730px;
-position: absolute;
-height: fit-content;
-width: 100%;
-background: #F1F1F1;
-border-radius: 0px;
-}
-.section1 img{
+    flex-direction: column;
+    align-items: center;
+    padding: 40px;
+    gap: 20px;
+    top: 3730px;
+    position: absolute;
+    height: fit-content;
+    width: 100%;
+    background: #F1F1F1;
+    border-radius: 0px;
+  }
+  
+  .section1 img {
     margin-left: -900px;
     margin-top: 200px;
-}
-.questions{
+  }
+  
+  .questions {
     margin-top: -52%;
     line-height: 25px;
     width: 60%;
     margin-left: 500px;
     color: black;
-}
-.section1 h1{
+  }
+  
+  .section1 h1 {
     margin-top: 50px;
-}
+  }
+  
+  /* Extra small devices (phones, 599px and down) */
+  @media only screen and (max-width: 599px) {
+    .section1 {
+      margin-top: 3800px;
+    }
+    .section1 h1 {
+      text-align: center;
+    }
+    .section1 img {
+      height: 468px;
+      margin-left: 0;
+      margin-top: 0px;
+    }
+    .questions {
+      width: 90%;
+      margin-left: 0;
+      margin-top: 50px;
+    }
+  }
+  
+  /* Small devices (portrait tablets and large phones, 600px and up) */
+  @media only screen and (min-width: 600px) {
+    .section1 img {
+      margin-left: -300px;
+    }
+    .questions {
+      width: 70%;
+      margin-left: 200px;
+    }
+  }
+  
+  /* Medium devices (landscape tablets, 768px and up) */
+  @media only screen and (min-width: 768px) {
+    .section1 img {
+      margin-left: -500px;
+    }
+    .questions {
+      width: 60%;
+      margin-left: 300px;
+    }
+  }
+  
+  /* Large devices (laptops/desktops, 992px and up) */
+  @media only screen and (min-width: 992px) {
+    .section1 img {
+      margin-left: -700px;
+    }
+    .questions {
+      width: 60%;
+      margin-left: 400px;
+    }
+  }
+  
+  /* Extra large devices (large laptops and desktops, 1200px and up) */
+  @media only screen and (min-width: 1200px) {
+    .section1 img {
+      margin-left: -900px;
+    }
+    .questions {
+      width: 60%;
+      margin-left: 500px;
+    }
+  }
+  
