--- a/src/components/Wallet/wallet.module.css
+++ b/src/components/Wallet/wallet.module.css
@@ -1,54 +1,120 @@
-.section1{
+.section1 {
     display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
-padding: 0px 40px;
-
-position: absolute;
-height: 519px;
-width: 100%;
-top: 80px;
-font-family: 'Inter';
-font-style: normal;
-background: #FCFCFA;
-border-radius: 0px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0px 40px;
+    position: absolute;
+    height: 519px;
+    width: 100%;
+    top: 80px;
+    font-family: 'Inter';
+    font-style: normal;
+    background: #FCFCFA;
+    border-radius: 0px;
 }
-.section1 img{
+.section1 img {
     margin-left: 60%;
     height: 500px;
- margin-top: -90px;
+    margin-top: -90px;
 }
-.section1 h5{
+.section1 h5 {
     width: 50%;
 }
-.section1 button{
+.section1 button {
     justify-content: center;
-align-items: center;
-padding: 3px 28px;
-gap: 16px;
-width: 266px;
-height: 46px;
-color: #FCFCFA;
-font-weight: 600;
-font-size: 18px;
-line-height: 40px;
-background: #904230;
-border-radius: 10px;
+    align-items: center;
+    padding: 3px 28px;
+    gap: 16px;
+    width: 266px;
+    height: 46px;
+    color: #FCFCFA;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 40px;
+    background: #904230;
+    border-radius: 10px;
 }
-.section1 h1, .section1 h5, .section1 button{
+.section1 h1, .section1 h5, .section1 button {
     margin-left: -50%;
     line-height: 36px;
 }
-.section1 h1{
+.section1 h1 {
     margin-top: -29%;
 }
-.section1 h3{
+.section1 h3 {
     margin-left: -50%;
     width: 750px;
     text-align: center;
     font-weight: 800;
 }
-.section1 form{
+.section1 form {
     margin-left: -30%;
+}
+
+/* Responsive styles */
+@media (max-width: 1200px) {
+    .section1 h3 {
+        width: 100%;
+        font-size: 28px;
+    }
+    .section1 img {
+        height: 400px;
+    }
+}
+
+@media (max-width: 992px) {
+    .section1 {
+        padding: 0px 20px;
+    }
+    .section1 img {
+        height: 350px;
+        margin-top: -70px;
+    }
+    .section1 h1, .section1 h5, .section1 button {
+        margin-left: -40%;
+    }
+}
+
+@media (max-width: 768px) {
+    .section1 {
+        height: auto;
+        padding: 40px 20px;
+        position: static;
+        top: 0;
+    }
+    .section1 img {
+        margin-left: 0;
+        height: 300px;
+        margin-top: 20px;
+    }
+    .section1 h1, .section1 h5, .section1 button {
+        margin-left: 0;
+    }
+    .section1 h1 {
+        margin-top: 0;
+    }
+    .section1 h3 {
+        margin-left: 0;
+
+    }
+    .section1 form {
+        margin-left: 0;
+    }
+    .section1 h5 {
+        width: 100%;
+    }
+}
+
+@media (max-width: 576px) {
+    .section1 img {
+        height: 250px;
+    }
+    .section1 button {
+        width: 200px;
+        font-size: 16px;
+    }
+    .section1 h5 {
+        width: 100%;
+    }
 }
