--- a/src/components/Wallet/Imp.module.css
+++ b/src/components/Wallet/Imp.module.css
@@ -1,32 +1,61 @@
-.section1{
+.section1 {
     display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
-padding: 20px 40px;
-position: absolute;
-padding-bottom: 40px;
-height: 600px;
-width: 100%;
-top: 635px;
-background: #0A2A42;
-color: white;
-border-radius: 0px;
-font-family: 'Inter';
-font-style: normal;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px 40px;
+    position: absolute;
+    padding-bottom: 40px;
+    height: 600px;
+    width: 100%;
+    top: 635px;
+    background: #0A2A42;
+    color: white;
+    border-radius: 0px;
+    font-family: 'Inter';
+    font-style: normal;
 }
-.section1 img{
+
+.section1 img {
     margin-left: -50%;
     margin-top: -5%;
-
 }
-.section1 h3{
+
+.section1 h3 {
     width: 50%;
     margin-left: 50%;
     margin-top: -28%;
 }
-.section1 h6{
+
+.section1 h6 {
     width: 50%;
     margin-left: 50%;
     line-height: 25px;
 }
+
+/* For tablets and medium-sized devices */
+@media (max-width: 767px) {
+    .section1 {
+        height: auto;
+        top: auto;
+
+    }
+    .section1 img {
+        margin-left: 0;
+        margin-top: 0;
+        height: 350px;
+        width: 100%;
+    }
+    .section1 h3 {
+        width: 100%;
+        margin-left: 0%;
+        margin-top: 2%;
+        text-align: center;
+    }
+    .section1 h6 {
+        width: 100%;
+        margin-left: 0%;
+        text-align: center;
+    }
+}
+
