--- a/src/components/Blockchain/Contact.module.css
+++ b/src/components/Blockchain/Contact.module.css
@@ -29,3 +29,35 @@ border-radius: 0px;
   text-align: center;
   line-height: 30px;
 }
+
+@media (max-width: 767px) {
+    .section1{
+        display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 40px;
+    
+    position: absolute;
+    height: fit-content;
+    width: 100%;
+    margin-top: 4480px;
+    color: aliceblue;
+    background: #343434;
+    border-radius: 0px;
+    }
+    .section1 h1{
+        margin-top: -700px;
+    }
+    
+    .table{
+        margin-top: 200px;
+        width: 100%;
+        margin-left: -90%;
+       
+    }
+    .section1 h6{
+   
+display: none;
+    }
+}
