--- a/src/components/Blockchain/blockchain.module.css
+++ b/src/components/Blockchain/blockchain.module.css
@@ -1,32 +1,66 @@
-.section1{
+.section1 {
     display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
-padding: 0px 40px;
-position: absolute;
-height: 550px;
-width: 100%;
-top: 90px;
-color: white;
-font-family: 'Inter';
-font-style: normal;
-background: #012044;
-border-radius: 0px;
-}
-.section1 img{
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0px 40px;
+    position: absolute;
+    height: 550px;
+    width: 100%;
+    top: 90px;
+    color: white;
+    font-family: 'Inter';
+    font-style: normal;
+    background: #012044;
+    border-radius: 0px;
+  }
+  
+  .section1 img {
     margin-left: 60%;
     height: 500px;
- margin-top: -150px;
-}
-.section1 h5{
+    margin-top: -150px;
+  }
+  
+  .section1 h5 {
     width: 50%;
     text-align: center;
     line-height: 30px;
-}
-.section1 h1, .section1 h5{
+  }
+  
+  .section1 h1,
+  .section1 h5 {
     margin-left: -50%;
-}
-.section1 h1{
+  }
+  
+  .section1 h1 {
     margin-top: -20%;
-}
+  }
+
+  @media (max-width: 767px) {
+    .section1 img {
+      margin-left: 0%;
+      margin-top: 50px;
+      height: 250px;
+    }
+    .section1 h1,
+    .section1 h5 {
+      margin-left: 0;
+      width: 100%;
+    }
+    .section1 h1 {
+      margin-top: 20px;
+      font-size: 22px;
+    }
+    .section1 h5 {
+      font-size: 14px;
+      width: 90%;
+    }
+    .section1{
+        padding-bottom: 20px;
+        height: fit-content;
+        position: relative;
+        top: 0px;
+    }
+  }
+  
+ 
