--- a/src/components/Blockchain/Contract.module.css
+++ b/src/components/Blockchain/Contract.module.css
@@ -28,3 +28,30 @@ margin-top: -5%;
 .section1 h6{
 line-height: 30px;
 }
+
+@media (max-width: 767px) {
+
+    .section1{
+    height: fit-content;
+    width: 100%;
+    margin-top: 2680px;
+    padding-bottom: 40px;
+    }
+    .section1 img{
+    margin-left: 0%;
+    margin-top: 7%;
+    height: 320px;
+    width: 100%;
+    }
+    .section1 h1,.section1 h6{
+        width: 100%;
+        margin-right: 0%;
+        text-align: center;
+    }
+    .section1 h1{
+        margin-top: 10%;
+    }
+    .section1 h6{
+    line-height: 27px;
+    }
+}
