--- a/src/components/Coin/FAQ.module.css
+++ b/src/components/Coin/FAQ.module.css
@@ -23,3 +23,27 @@ border-radius: 0px;
     margin-left: 500px;
     color: black;
 }
+@media (max-width: 767px) {
+  
+    .section1{
+        height: fit-content;
+        width: 100%;
+           top: 7280px;
+        background: #F1F1F1;
+        border-radius: 0px;
+        }
+        .section1 h1{
+          text-align: center;
+        }
+     
+        .section1 img{
+       
+        height: 468px;
+    margin-left: 60px;
+        }
+        .questions {
+        width: 350px;
+        margin-left: 0px;
+        margin-top: 50px;
+        }
+}
