--- a/src/components/Coin/Types.module.css
+++ b/src/components/Coin/Types.module.css
@@ -17,3 +17,24 @@ border-radius: 0px;
     width: 80%;
     text-align: center;
 }
+@media (max-width: 767px) {
+    .section1{
+        display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 40px 40px 60px;
+    gap: 40px;
+    
+    position: absolute;
+    width: 100%;
+    height: fit-content;
+    top: 1890px;
+    color: aliceblue;
+    background: #0A2A42;
+    border-radius: 0px;
+    }
+    .section1 h6{
+        width: 80%;
+        text-align: center;
+    }
+}
