--- a/src/components/Wallet/wallet.module.css
+++ b/src/components/Wallet/wallet.module.css
@@ -84,4 +84,54 @@
         width: 100%;
     }
 }
+/* Landscape tablets */
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
+    /* Your styles here */
+
+    .section1 img {
+        margin-left: 50%;
+        height: 400px;
+        margin-top: 50px;
+    }
+    
+    .section1 h5 {
+        width: 50%;
+    }
+    .section1 button {
+        justify-content: center;
+        align-items: center;
+        padding: 3px 28px;
+        gap: 16px;
+        width: 266px;
+        height: 46px;
+        color: #FCFCFA;
+        font-weight: 600;
+        font-size: 18px;
+        line-height: 40px;
+        background: #904230;
+        border-radius: 10px;
+    
+    }
+    .section1 h1, .section1 h5, .section1 button {
+        margin-left: -50%;
+        line-height: 36px;
+    }
+    .section1 h1 {
+        margin-top: -33%;
+        width: 50%;
+    }
+    .section1 h3 {
+        margin-left: 0%;
+        width: 600px;
+        text-align: center;
+        font-weight: 800;
+    }
+    .section1 form {
+        margin-left: -30%;
+    }
+    .section1 form {
+        margin-left: 25%;
+    }
+  }
+  
 
