--- a/src/components/Wallet/Imp.module.css
+++ b/src/components/Wallet/Imp.module.css
@@ -58,4 +58,27 @@
         text-align: center;
     }
 }
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
+ 
+    .section1 img {
+        margin-left: -50%;
+        margin-top: 3%;
+  
+    }
+    
+    .section1 h3 {
+        width: 50%;
+        margin-left: 58%;
+        margin-top: -52%;
+    }
+    
+    .section1 h6 {
+        width: 47%;
+        margin-left: 56%;
+        line-height: 25px;
+        text-align: justify;
+    }
+}
+
+
 
