--- a/src/components/Wallet/FAQ.module.css
+++ b/src/components/Wallet/FAQ.module.css
@@ -49,6 +49,27 @@
     }
   }
   
+  @media only screen and (min-width: 768px) and (max-width: 1024px) {
 
+    .section1 {
+        margin-top: 180px;
+      }
+      .section1 img {
+        margin-left: -550px;
+        margin-top: 90px;
+      }
+      
+      .questions {
+        margin-top: -75%;
+        line-height: 25px;
+        width: 50%;
+        margin-left: 400px;
+        color: black;
+      }
+      
+      .section1 h1 {
+        margin-top: 50px;
+      }
+  }
 
   
