--- a/src/App.css
+++ b/src/App.css
@@ -121,3 +121,16 @@ border-radius: 0px;
   filter: drop-shadow(0px 0px 4px rgba(0, 0, 0, 0.25));
 }
 }
+@media only screen and (min-width: 834px) and (max-width: 1194px) {
+  .logo {
+    display: flex;
+    align-items: center;
+    padding-right: 70px;
+  }
+  
+.logo img {
+  width: 170px;
+  height: 70px;
+  filter: drop-shadow(0px 0px 4px rgba(0, 0, 0, 0.25));
+}
+}
