--- a/src/components/Wallet/Expertise.module.css
+++ b/src/components/Wallet/Expertise.module.css
@@ -36,5 +36,13 @@
     }
   }
   
+  @media only screen and (min-width: 834px) and (max-width: 1194px) {
+    .section1 {
+        margin-top: 3100px;
+      }
+      .section1 h2 {
+    text-align: center;  
+    }
+  }
   
 
