--- a/src/components/Wallet/Imp.module.css
+++ b/src/components/Wallet/Imp.module.css
@@ -80,5 +80,24 @@
     }
 }
 
-
+@media only screen and (min-width: 834px) and (max-width: 1194px) {
+    .section1 img {
+        margin-left: -50%;
+        margin-top: 3%;
+  
+    }
+    
+    .section1 h3 {
+        width: 50%;
+        margin-left: 58%;
+        margin-top: -52%;
+    }
+    
+    .section1 h6 {
+        width: 47%;
+        margin-left: 56%;
+        line-height: 25px;
+        text-align: justify;
+    }
+  }
 
