--- a/src/components/Wallet/FAQ.module.css
+++ b/src/components/Wallet/FAQ.module.css
@@ -72,24 +72,23 @@
       }
   }
 
-  @media only screen and (min-width: 834px) and (max-width: 1194px) {
-    .section1 {
-        margin-top: 120px;
-      }
-      .section1 img {
-        margin-left: -650px;
-        margin-top: 90px;
-      }
-      
-      .questions {
-        margin-top: -60%;
-        line-height: 25px;
+@media only screen and (min-width: 834px) and (max-width: 1194px) {
+    .section1 img {
+        margin-left: -50%;
+        margin-top: 3%;
+  
+    }
+    
+    .section1 h3 {
         width: 50%;
-        margin-left: 400px;
-        color: black;
-      }
-      
-      .section1 h1 {
-        margin-top: 50px;
-      }
+        margin-left: 58%;
+        margin-top: -52%;
+    }
+    
+    .section1 h6 {
+        width: 47%;
+        margin-left: 56%;
+        line-height: 25px;
+        text-align: justify;
+    }
   }
