--- a/src/components/Wallet/wallet.module.css
+++ b/src/components/Wallet/wallet.module.css
@@ -135,13 +135,13 @@
   }
   
 
-  @media only screen and (min-width: 834px) and (max-width: 1194px) {
+   @media only screen and (min-width: 834px) and (max-width: 1194px) {
    /* Your styles here */
 
    .section1 img {
     margin-left: 50%;
-    height: 390px;
-    margin-top: 30px;
+    height: 400px;
+    margin-top: 50px;
 }
 
 .section1 h5 {
@@ -175,6 +175,7 @@
     width: 600px;
     text-align: center;
     font-weight: 800;
+    margin-top: 5%;
 }
 .section1 form {
     margin-left: -30%;
@@ -183,3 +184,4 @@
     margin-left: 25%;
 }
   }
+  
