--- a/src/components/Wallet/Imp.module.css
+++ b/src/components/Wallet/Imp.module.css
@@ -58,6 +58,7 @@
         text-align: center;
     }
 }
+
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
  
     .section1 img {
@@ -82,21 +83,21 @@
 @media only screen and (min-width: 834px) and (max-width: 1194px) {
     .section1 img {
         margin-left: -50%;
-        margin-top: 3%;
+        margin-top: 2%;
+        height: 460px;
   
     }
     
     .section1 h3 {
         width: 50%;
-        margin-left: 58%;
-        margin-top: -52%;
+        margin-left: 56%;
+        margin-top: -41%;
     }
     
     .section1 h6 {
         width: 47%;
-        margin-left: 56%;
+        margin-left: 54%;
         line-height: 25px;
         text-align: justify;
     }
   }
-
