--- a/src/components/Home/Layout.module.css
+++ b/src/components/Home/Layout.module.css
@@ -14,7 +14,7 @@
   }
   
   .topHeading{
-    margin-top: -450px;
+    margin-top: -400px;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 600;
@@ -50,23 +50,7 @@
   
   }
   
-  .btn1{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    padding: 3px 28px;
-    gap: 16px;
-    position: absolute;
-    bottom: 90px;
-    left: 8%;
-    transform: translateX(-50%);
-    width: 174px;
-    height: 46px;
-    background: #904230;
-    border-radius: 10px;
-    color: white;
-  }
+
   .image1{ 
   width: 790px;
   height: 510px;
@@ -124,7 +108,7 @@
       .image1 {
         width: 100%;
         height: auto;
-        margin-top: 40px;
+        margin-top: -20px;
         margin-left: 0%;
     
       }
@@ -132,7 +116,7 @@
       .topHeading {
         font-size: 16px;
         line-height: 22px;
-        margin-top: -210px;
+        margin-top: 10px;
       }
     
       .topHeading2 {
@@ -148,10 +132,7 @@
         width: 300px;
       }
     
-      .btn1 {
-        margin-top: 20px;
-        margin-left: 80px;
-      }
+     
       .secondSection {
         padding: 60px 20px;
         height: 623px;
@@ -161,7 +142,7 @@
         width: 100%;
         font-size: 28px;
         line-height: 34px;
-        margin: 20px 0 10px;
+        margin: 0px 0 10px;
         text-align: center;
       }
       
@@ -169,9 +150,22 @@
         width: 100%;
         font-size: 16px;
         line-height: 22px;
-        margin: 10px 0 20px;
+        margin: 0px 0 20px;
         text-align: center;
       }
      
      
+}
+@media only screen and (min-width: 834px) and (max-width: 1194px) {
+
+
+
+.secondSection h1 {
+  margin-left: -400px;
+}
+
+.secondSection p{
+  margin-left: -400px;
+}
+
 }
