--- a/src/components/Metaverse/Meta.module.css
+++ b/src/components/Metaverse/Meta.module.css
@@ -62,3 +62,19 @@ font-size: 48px;
     
     }
 }
+@media only screen and (min-width: 834px) and (max-width: 1194px) {
+
+    .section1 h1{
+        margin-top: -320px;
+        margin-left: 100px;
+        font-weight: 700;
+    font-size: 48px;
+    }
+ 
+    .section2{
+        color: black;
+        margin-top:570px;
+        text-align: center;
+    }
+
+}
