--- a/src/components/Metaverse/Benefits.module.css
+++ b/src/components/Metaverse/Benefits.module.css
@@ -18,6 +18,13 @@ color: aliceblue;
 @media (max-width: 767px) {
 
     .section1{
-    top: 7100px;
+    top: 7790px;
+    }
+}
+@media only screen and (min-width: 834px) and (max-width: 1194px) {
+    .section1{
+
+    top: 3490px;
+    
     }
 }
