--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,13 @@
   height: 70.89px;
   filter: drop-shadow(0px 0px 4px rgba(0, 0, 0, 0.25));
 }
-
+.nav-link:hover{
+  -ms-transform: scale(1.2); /* IE 9 */
+  -webkit-transform: scale(1.2); /* Safari 3-8 */
+  transform: scale(1.2);
+  color: blue;
+  transition: all .6s;
+}
 /* Clients.js css section */
 .clientSection{
   display: flex;
