--- a/src/components/Defi/Services.module.css
+++ b/src/components/Defi/Services.module.css
@@ -40,7 +40,7 @@ border-radius: 0px;
     .section1{
 
         height: 1000px;
-    margin-top: 700%;
+    margin-top: 870%;
         width: 100%;
         height: fit-content;
         color: rgb(3, 3, 3);
@@ -50,12 +50,15 @@ border-radius: 0px;
         height: 210px;
     }
     .section1 h2{
-        width: 100%;
+        width: 95%;
         margin-top: 0%;
         text-align: center;
         font-size: 19px;
     }
+    .card{
+        height: fit-content !important;
+     }
     .section2{
-    margin-top: 3050px;
+    margin-top: 3500px;
       }
 }
