--- a/src/components/Exchange/ExDevelopment.module.css
+++ b/src/components/Exchange/ExDevelopment.module.css
@@ -31,7 +31,7 @@ top: 1380px;
 background: #0A2A42;
 border-radius: 0px;
 }
- img{
+ .img{
 
    height: 400px;
    width: 450px;
@@ -80,7 +80,7 @@ padding-top: 0px;
     border-radius: 0px;
     }
   
-    img{
+    .img{
 
         height: 300px;
         width: 350px;
