--- a/src/components/Nft/FAQ.module.css
+++ b/src/components/Nft/FAQ.module.css
@@ -7,17 +7,18 @@ gap: 20px;
 position: absolute;
 height: fit-content;
 width: 100%;
-top: 2840px;
+top: 2920px;
 
 background: #F1F1F1;
 border-radius: 0px;
 }
 .section1 h1{
-    margin-top: 50px;
+    margin-top: 0px;
 }
 .section1 img{
     margin-left: -900px;
     margin-top: 100px;
+    height: fit-content;
 }
 .questions{
     margin-top: -46%;
