--- a/src/components/Home/Contact.module.css
+++ b/src/components/Home/Contact.module.css
@@ -97,7 +97,7 @@ margin-top: -30px;
     position: absolute;
     height: 1700px;
     width: 100%;
-    top: 12350px;
+    top: 12480px;
     background: #343434;
     }
     .container{
@@ -121,7 +121,9 @@ margin-top: -30px;
         color: rgb(253, 253, 253);
         margin-left: -320px;
         margin-top: 200px;
+    width: fit-content;
     }
+    
     .circle1, .circle2, .circle3, .circle4{
         box-sizing: border-box;
         position: absolute;
@@ -202,7 +204,5 @@ margin-top: -30px;
      
     }
 
-    
-
-    
+   
 }
