--- a/src/components/Nft/FAQ.module.css
+++ b/src/components/Nft/FAQ.module.css
@@ -50,3 +50,32 @@ border-radius: 0px;
         margin-top: 50px;
         }
 }
+@media only screen and (min-width: 834px) and (max-width: 1400px) {
+
+    .section1{
+        display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0px;
+    gap: 20px;
+    position: absolute;
+    height: fit-content;
+    width: 100%;
+    top: 3078px;
+    
+    background: #F1F1F1;
+    border-radius: 0px;
+    }
+    .questions{
+        margin-top: -53%;
+        line-height: 30px;
+        width: 60%;
+        margin-left: 500px;
+    }
+
+    .section1 img{
+        margin-left: -800px;
+        margin-top: 100px;
+        height: fit-content;
+    }
+}
