--- a/src/components/Metaverse/Benefits.module.css
+++ b/src/components/Metaverse/Benefits.module.css
@@ -28,3 +28,10 @@ color: aliceblue;
     
     }
 }
+@media only screen and (min-width: 834px) and (max-width: 1400px) {
+    .section1{
+
+    top: 3410px;
+    
+    }
+}
