--- a/src/components/Metaverse/FAQ.module.css
+++ b/src/components/Metaverse/FAQ.module.css
@@ -74,3 +74,21 @@ border-radius: 0px;
         margin-left: 450px;
     }
 }
+@media only screen and (min-width: 834px) and (max-width: 1400px) {
+
+    .questions{
+        margin-top: -50%;
+        line-height: 30px;
+        width: 60%;
+        margin-left: 450px;
+    }
+    .section1 img{
+        margin-left: -830px;
+    }
+  .section1 h1{
+    padding-bottom: 2%;
+  }
+  .section1{
+    top: 4260px;
+  }
+}
