--- a/src/components/Exchange/ExDevelopment.module.css
+++ b/src/components/Exchange/ExDevelopment.module.css
@@ -100,3 +100,11 @@ height: fit-content;
     }
 
  }
+ @media only screen and (min-width: 834px) and (max-width: 1400px) {
+
+    .image2{
+        height:350px;
+    margin-top: 15%;
+    }
+
+ }
