--- a/src/components/Home/MetaverseBenefits.module.css
+++ b/src/components/Home/MetaverseBenefits.module.css
@@ -124,3 +124,34 @@
     margin-top: -235px;
   }
 }
+@media only screen and (min-width: 1100px) and (max-width: 1400px) {
+  .box1, .box2, .box3, .box4, .box5{
+    width: 380px;
+  text-align: center;
+    padding: 10px;
+    border: transparent;
+    background: transparent;
+    color: white;
+  }
+  
+  .box1{
+    margin-left: -780px;
+    margin-top: 40px;
+  }
+  .box2{
+    margin-top: -245px;
+  }
+  .box3{
+    margin-left: 780px;
+    margin-top: -245px;
+  }
+  .box4{
+    margin-left: -450px;
+    margin-top: 80px;
+  }
+  .box5{
+    margin-left: 450px;
+    margin-top: -235px;
+  }
+
+}
