--- a/src/components/Web3.0/main.module.css
+++ b/src/components/Web3.0/main.module.css
@@ -7,7 +7,7 @@ position: absolute;
 height: 519px;
 width: 100%;
 top: 90px;
-background: #FCFCFA;
+background: #b5b584;
 }
 .mainBody h1{
  margin-top: 13%;
