--- a/src/components/Defi/Services.module.css
+++ b/src/components/Defi/Services.module.css
@@ -36,6 +36,9 @@ top: 4380px;
 background: #FCFCFF;
 border-radius: 0px;
 }
+.section2 h1{
+    margin-top: -50px;
+}
 @media (max-width: 767px) {
     .section1{
 
